# WaterNeuron

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  Cargo.toml  Containerfile  Dockerfile  LICENSE.md  MODULE.bazel  README.md  WORKSPACE.bazel  build.sh  canister_ids.json  canisters.toml  dfx.json  download-pocket-ic.sh  external_canisters.toml  flake.nix  package-lock.json  run.sh  rust-toolchain.toml  sns_canister_ids.json  water_neuron_wtn_sns_init.yaml
.cargo/: config.toml  lmdb-patch.diff
.devcontainer/: .gitconfig  .vimrc  config.fish  devcontainer.json
.github/workflow/: ci.yml  podman.yml
.github/workflows/: ci.yml  podman.yml
bazel/: BUILD.bazel  candid.bzl  canisters.bzl  defs.bzl  hash_rule.bzl  ic_candid.bzl  ic_canister.bzl  icrc1_ledger.bzl  lmdb_rkv_sys.patch  shfmt.bzl  version.bzl
boomerang/: BUILD.bazel  Cargo.toml  README.md  boomerang.did
boomerang/src/: icp_to_nicp.rs  lib.rs  log.rs  main.rs  nicp_to_icp.rs
boomerang/src/state_machine/: mod.rs  tests.rs  utils.rs
candid/: icrc_ledger.did
frontend/: .gitignore  README.md  canister_ids.json  dfx.json  local_deploy.sh  mainnet_deploy.sh  package-lock.json  package.json  playwright.config.ts  svelte.config.js  test_init.sh  vite.config.ts
frontend/src/: app.html  index.test.ts
frontend/src/declarations/boomerang/: boomerang.did.d.ts  index.js
frontend/src/declarations/icp_ledger/: icp_ledger.did.d.ts  index.js
frontend/src/declarations/icpswap_pool/: icpswap_pool.did.d.ts  index.js
frontend/src/declarations/icrc_ledger/: icrc_ledger.did.d.ts  index.js
frontend/src/declarations/nns-ledger/: index.js
frontend/src/declarations/water_neuron/: index.js  water_neuron.did.d.ts
frontend/src/lib/: actors.ts  authentification.ts  env.ts  index.ts  ledger-identity.ts  ledger.ts  resultHandler.ts  state.ts  stores.ts  toast.ts
frontend/src/lib/components/: Skeleton.svelte
frontend/src/lib/icons/: ArrowIcon.svelte  ChangeIcon.svelte  CloseIcon.svelte  ConfirmIcon.svelte  CopyIcon.svelte  DiscordIcon.svelte  ErrorIcon.svelte  FullScreenIcon.svelte  GitBookIcon.svelte  GithubIcon.svelte  InfoIcon.svelte  OpenChatIcon.svelte  PowerOffIcon.svelte  QRCodeScannerIcon.svelte  RevertIcon.svelte  SuccessIcon.svelte  TelegramIcon.svelte  TwitterIcon.svelte  UpIcon.svelte  WarningIcon.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  Connect.svelte  Faq.svelte  Footer.svelte  Menu.svelte  Navbar.svelte  Toast.svelte
frontend/src/routes/lang/: cn.json  en.json  es.json  ja.json  ru.json
frontend/src/routes/launchpad/: +page.svelte  QrDestination.svelte  sns_module.did.d.ts  sns_module.js
frontend/src/routes/recovery/: +page.svelte
frontend/src/routes/sns/: +page.svelte  SnsListing.svelte  SnsMenu.svelte  sns_metadata.json
frontend/src/routes/stake/: +page.server.ts  +page.svelte  Chart.svelte  Stake.svelte  StatsWidget.svelte  Swap.svelte  SwapInput.svelte  Unstake.svelte  UnstakeWarning.svelte
frontend/src/routes/stake/lang/: en.json  es.json  ja.json  ru.json
frontend/src/routes/wallet/: +page.svelte  CancelWarning.svelte  LedgerWallet.svelte  MainWallet.svelte  Receive.svelte  Send.svelte  SendButton.svelte  Withdrawals.svelte
frontend/static/: .ic-assets.json  manifest.json  robots.txt  sitemap.xml
frontend/static/.well-known/: ic-domains  ii-alternative-origins
frontend/tests/: README.md  e2e.spec.ts  ledger-identity.spec.ts  lib.spec.ts  utils.ts
frontend/wasm/: governance-canister.wasm  governance-canister_test.wasm  icpswap-pool.wasm  water_neuron.wasm
ic_wasm_utils/: Cargo.toml  README.md
ic_wasm_utils/src/: compile.rs  external.rs  lib.rs  main.rs
icrc_validator/: Cargo.toml  icrc_validator.did
icrc_validator/src/: main.rs
neuron_receiver/: BUILD.bazel  neuron_receiver.did
neuron_receiver/src/: lib.rs  main.rs  state.rs
proposals/: 2024_07_11_register_canisters.md  2024_07_13_register_nns_voting.md  2024_07_13_transfer_wtn_to_protocol.md  2024_07_16_install_nicp_ledger.md  2024_07_19_install_nicp_index.md  2024_07_19_register_frontend_canister.md  2024_07_22_install_water_neuron.md  2024_07_28_update_sns_metadata.md  2024_08_03_install_boomerang.md  2024_08_07_install_boomerang.md  2025_12_30_upgrade_waterneuron.md
proposals/sns_proposals/: water_neuron_wtn_sns_init.yaml
scripts/: BUILD.bazel  build.sh  get-changes.sh  shfmt-format.sh  shfmt-lint.sh  verify.sh  workspace_status.sh
scripts/data/: .gitconfig  .vimrc
scripts/verify/: BUILD.bazel
scripts/verify/src/: main.rs  types.rs
sns_module/: BUILD.bazel  Cargo.toml  sns_module.did
sns_module/src/: guards.rs  lib.rs  main.rs  memory.rs  state.rs  state_machine.rs
wasm/: boomerang.wasm  sns_module.wasm
water_neuron/: BUILD.bazel  Cargo.toml  water_neuron.did
water_neuron/src/: conversion.rs  dashboard.rs  guards.rs  icrc21.rs  lib.rs  logs.rs  main.rs  management.rs  nns_types.rs  numeric.rs  proposal.rs  sns_distribution.rs  sns_governance.rs  state.rs  storage.rs  tasks.rs
water_neuron/src/cbor/: account.rs  mod.rs  tests.rs
water_neuron/src/state/: audit.rs  event.rs  tests.rs
water_neuron/src/state_machine/: e2e.rs  mod.rs  tests.rs
water_neuron/src/state_machine/canisters/: cycles-minting-canister.wasm  governance-canister.wasm  ic-icrc1-ledger.wasm  ledger-canister.wasm
water_neuron/src/state_machine/sns-canisters/: sns-governance-canister.wasm  sns-root-canister.wasm  sns-swap-canister.wasm  sns-wasm-canister.wasm
