package(default_visibility = ["//visibility:public"])

exports_files([
    "clippy.toml",
    "rustfmt.toml",
    "WORKSPACE.bazel",
])

alias(
    name = "rustfmt",
    actual = "@rules_rust//:rustfmt",
)

alias(
    name = "shfmt-format",
    actual = "//scripts:shfmt-format",
)

alias(
    name = "shfmt-lint",
    actual = "//scripts:shfmt-lint",
)

alias(
    name = "verify",
    actual = "//scripts/verify:bin",
)

genrule(
    name = "version",
    outs = ["version.txt"],
    cmd_bash = """
        export HOME="/waterneuron"
        if [[ -n "$${STABLE_GIT_COMMIT:-}" ]]; then
            echo "$${STABLE_GIT_COMMIT}" > $@
        else
            cat bazel-out/stable-status.txt | grep ^STABLE_GIT_COMMIT | cut -d' ' -f2 > $@
        fi
    """,
    stamp = 1,
)

