[workspace]
authors = ["WaterNeuron"]
description = "ICP Liquid Staking"
documentation = "https://docs.waterneuron.fi/"
members = ["sns_module", "boomerang", "ic_wasm_utils", "water_neuron"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.83"
candid = "0.10.6"
candid_parser = "0.1.2"
ciborium = "0.2.1"
clap = { version = "4.5.18", features = ["derive", "string"] }
env_logger = "0.11.3"
hex = { version = "0.4.3", features = ["serde"] }
ic-agent = { version = "0.37.1", features = [
    "experimental_sync_call",
    "hyper",
    "reqwest",
    "pem",
] }
reqwest = { version = "0.11", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
toml = "0.8"
dirs = "5.0"
once_cell = "1.18"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.9.0"
ic-canister-log = "0.2.0"
ic-metrics-encoder = "1.1.1"
ic-stable-structures = "0.6.5"
ic0 = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.14"
minicbor = { version = "0.19.1", features = ["alloc", "derive"] }
minicbor-derive = "0.13.0"
mockall = "0.12.1"
num-bigint = "0.4.6"
num-traits = "0.2.18"
proptest = "1.5.0"
prost = "0.13.3"
regex = "1.11.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = { version = "^1.0.107" }
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["full"] }

# DFINITY IC dependencies
cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-sns-init = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-sns-root = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-sns-swap = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic.git", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-utils-ensure = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }
ic-management-canister-types = { git = "https://github.com/dfinity/ic", rev = "c58e00fe2271d77ede9ccab5a6b317689859ea98" }

#[patch.crates-io]
#lmdb-rkv-sys = { git = "https://github.com/dfinity-lab/lmdb-rs", rev = "f62018b2deb79ea0d53914d5502389433fc3e6da", patches = [
#    ".cargo/lmdb-patch.diff",
#] }
#

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true

[profile.release-stripped]
inherits = "release"
lto = "thin"
debug = false

[profile.release-lto]
inherits = "release"
# Enable "thin" LTO to reduce both the compilation time and the binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"

[profile.canister-release]
inherits = "release"
debug = false
lto = true
opt-level = 'z'
