[workspace]
members = ["ic_wasm_utils", "water_neuron", "boomerang"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
assert_matches = "1.5.0"
async-trait = "0.1.80"
candid = "0.10.14"
candid_parser = "0.1.4"
ciborium = "0.2.1"
clap = { version = "4.5.9", features = ["derive", "string"] }
env_logger = "0.11.3"
hex = { version = "0.4.3", features = ["serde"] }
ic-agent = { version = "0.36.0", features = [
    "experimental_sync_call",
    "hyper",
    "reqwest",
    "pem",
] }
reqwest = { version = "0.11", features = [
    "blocking",
    "rustls-tls",
], default-features = false }
toml = "0.8"
dirs = "5.0"
once_cell = "1.18"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-canister-log = "0.2.0"
ic-http-types = "0.1.0"
ic-management-canister-types = "0.3.1"
ic-metrics-encoder = "1.1.1"
ic-stable-structures = "0.6.7"
ic0 = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.14"
minicbor = { version = "0.24.2", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
mockall = "0.12.1"
num-bigint = "0.4.4"
num-traits = "0.2.18"
pocket-ic = "6.0.0"
proptest = "1.5.0"
prost = "0.12.6"
regex = "1.10.5"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = { version = "^1.0.107" }
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
cargo_metadata = "0.19.1"

# DFINITY IC dependencies 
cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-sns-governance-api = { git = "https://github.com/dfinity/ic", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-sns-init = { git = "https://github.com/dfinity/ic.git", rev =  "250daf4dd0cf7ea74c496b45457dd47ced16368c"}
ic-sns-root = { git = "https://github.com/dfinity/ic.git", rev =  "250daf4dd0cf7ea74c496b45457dd47ced16368c"}
ic-sns-swap = { git = "https://github.com/dfinity/ic.git", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c" }
ic-utils-ensure = { git = "https://github.com/dfinity/ic", rev = "250daf4dd0cf7ea74c496b45457dd47ced16368c"}
icp-ledger = { git = "https://github.com/dfinity/ic", rev =  "250daf4dd0cf7ea74c496b45457dd47ced16368c"}
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", rev =  "250daf4dd0cf7ea74c496b45457dd47ced16368c"}
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev =  "250daf4dd0cf7ea74c496b45457dd47ced16368c"}
