workspace(
    name = "waterneuron",
)

IC_VERSION = "7eace38b7580dc35af53b9180ea40480af4977dc"

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = [
        "1.76.0",
    ],
)

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")

# https://sourcegraph.com/github.com/dfinity/ic/-/blob/rs/monitoring/backtrace/build.rs
crates_repository(
    name = "crate_index",
    annotations = {
        "ic-icrc1-ledger": [crate.annotation(
            build_script_data = [
                "@ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz",
            ],
            build_script_env = {
                "IC_ICRC1_ARCHIVE_WASM_PATH": "$(execpath @ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz)",
            },
            build_script_rustc_env = {
                "IC_ICRC1_ARCHIVE_WASM_PATH": "$(execpath @ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz)",
            },
            data = [
                "@ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz",
            ],
        )],
    },
    cargo_lockfile = "//:Cargo.lock",
    isolated = True,
    lockfile = "//:Cargo.Bazel.lock",
    packages = {
        "async-trait": crate.spec(version = "^0.1.80"),
        "candid": crate.spec(version = "^0.10.7"),
        "ciborium": crate.spec(version = "^0.2.2"),
        "hex": crate.spec(version = "^0.4.3"),
        "ic0": crate.spec(version = "^0.21.1"),
        "ic-canister-log": crate.spec(version = "^0.2.0"),
        "ic-cdk": crate.spec(version = "^0.13.2"),
        "ic-cdk-macros": crate.spec(version = "^0.13.2"),
        "ic-canisters-http-types": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "icp-ledger": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "icrc-ledger-types": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "icrc-ledger-client-cdk": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-sns-governance": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-metrics-encoder": crate.spec(version = "^1.1.1"),
        "ic-stable-structures": crate.spec(version = "^0.6.3"),
        "ic-utils-ensure": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "minicbor": crate.spec(
            features = [
                "alloc",
                "derive",
            ],
            version = "^0.24.0",
        ),
        "minicbor-derive": crate.spec(version = "^0.15.0"),
        "rust_decimal": crate.spec(version = "^1.35.0"),
        "rust_decimal_macros": crate.spec(version = "^1.34.2"),
        "scopeguard": crate.spec(version = "^1.2.0"),
        "serde": crate.spec(version = "^1.0.198"),
        "serde_bytes": crate.spec(version = "^0.11.14"),
        "serde_cbor": crate.spec(version = "^0.11.2"),
        "serde_json": crate.spec(version = "^1.0.116"),
        "sha2": crate.spec(version = "^0.10.8"),
        "strum": crate.spec(version = "^0.26.2"),
        "strum_macros": crate.spec(version = "^0.26.2"),
        "assert_matches": crate.spec(version = "^1.3.0"),
        "candid_parser": crate.spec(version = "^0.1.4"),
        "cycles-minting-canister": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "lazy_static": crate.spec(version = "^1.4.0"),
        "mockall": crate.spec(version = "^0.12.1"),
        "num-bigint": crate.spec(version = "^0.4.4"),
        "num-traits": crate.spec(version = "^0.2.18"),
        "ic-icrc1-ledger": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-nns-constants": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-nns-governance": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-init": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-root": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-swap": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-state-machine-tests": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "proptest": crate.spec(version = "^1.4.0"),
        "prost": crate.spec(version = "^0.12.3"),
        "tokio": crate.spec(version = "^1.36.0"),
    },
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

load("//bazel:ic_canister.bzl", "ic_canister")

ic_canister(
    name = "ic-icrc1-ledger",
    sha256 = "54aa8fd9172e7e59a39e55c70b3c8a159cf3d8f4c1b2b1284aa3b80cf82ff207",
    version = IC_VERSION,
    wasm_file = "ic-icrc1-ledger.wasm.gz",
)

ic_canister(
    name = "ledger-canister",
    sha256 = "54aa8fd9172e7e59a39e55c70b3c8a159cf3d8f4c1b2b1284aa3b80cf82ff207",
    version = IC_VERSION,
    wasm_file = "ledger-canister.wasm.gz",
)

ic_canister(
    name = "cycles-minting-canister",
    sha256 = "aa266dd755b11b2a5953ef217469dfadf5be2c1802748ad687d5b4dc5f5723fc",
    version = IC_VERSION,
    wasm_file = "cycles-minting-canister.wasm.gz",
)

ic_canister(
    name = "governance-canister",
    sha256 = "204efca0fe1ed4efa96d89ef97a31abdb7addcc6ef84b22aa575b8e20d98a11f",
    version = IC_VERSION,
    wasm_file = "governance-canister.wasm.gz",
)

ic_canister(
    name = "sns-root-canister",
    sha256 = "e875dd9832296c7c5ef3dae1c3a16f1f11ce8415c8b2c11495e341c89425fac4",
    version = IC_VERSION,
    wasm_file = "sns-root-canister.wasm.gz",
)

ic_canister(
    name = "sns-governance-canister",
    sha256 = "a9bfebf9fc22b0c85a596b60cb3796046a774e52467c0e2eb6243fde4aca5608",
    version = IC_VERSION,
    wasm_file = "sns-governance-canister.wasm.gz",
)

ic_canister(
    name = "sns-swap-canister",
    sha256 = "23f76fb1ac997b455cae5ea834812d10df42d1808eb8a45e502ae7c3c538e065",
    version = IC_VERSION,
    wasm_file = "sns-swap-canister.wasm.gz",
)

ic_canister(
    name = "sns-wasm-canister",
    sha256 = "6a666f46f0234e60d951ab17781324fefdc13b128f6b3138b1ade92887db1351",
    version = IC_VERSION,
    wasm_file = "sns-wasm-canister.wasm.gz",
)
