workspace(
    name = "waterneuron",
)

IC_VERSION = "7eace38b7580dc35af53b9180ea40480af4977dc"

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = [
        "1.76.0",
    ],
)

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")

# https://sourcegraph.com/github.com/dfinity/ic/-/blob/rs/monitoring/backtrace/build.rs
crates_repository(
    name = "crate_index",
    annotations = {
        "ic-icrc1-ledger": [crate.annotation(
            build_script_data = [
                "@ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz",
            ],
            build_script_env = {
                "IC_ICRC1_ARCHIVE_WASM_PATH": "$(execpath @ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz)",
            },
            build_script_rustc_env = {
                "IC_ICRC1_ARCHIVE_WASM_PATH": "$(execpath @ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz)",
            },
            data = [
                "@ic-icrc1-ledger//:ic-icrc1-ledger.wasm.gz",
            ],
        )],
    },
    cargo_lockfile = "//:Cargo.lock",
    isolated = True,
    lockfile = "//:Cargo.Bazel.lock",
    packages = {
        "async-trait": crate.spec(version = "^0.1.80"),
        "candid": crate.spec(version = "^0.10.7"),
        "ciborium": crate.spec(version = "^0.2.2"),
        "hex": crate.spec(version = "^0.4.3"),
        "ic0": crate.spec(version = "^0.21.1"),
        "ic-canister-log": crate.spec(version = "^0.2.0"),
        "ic-cdk": crate.spec(version = "^0.13.2"),
        "ic-cdk-macros": crate.spec(version = "^0.13.2"),
        "ic-canisters-http-types": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "icp-ledger": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "icrc-ledger-types": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "icrc-ledger-client-cdk": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-sns-governance": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-metrics-encoder": crate.spec(version = "^1.1.1"),
        "ic-stable-structures": crate.spec(version = "^0.6.3"),
        "ic-utils-ensure": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "minicbor": crate.spec(
            features = [
                "alloc",
                "derive",
            ],
            version = "^0.24.0",
        ),
        "minicbor-derive": crate.spec(version = "^0.15.0"),
        "rust_decimal": crate.spec(version = "^1.35.0"),
        "rust_decimal_macros": crate.spec(version = "^1.34.2"),
        "scopeguard": crate.spec(version = "^1.2.0"),
        "serde": crate.spec(version = "^1.0.198"),
        "serde_bytes": crate.spec(version = "^0.11.14"),
        "serde_cbor": crate.spec(version = "^0.11.2"),
        "serde_json": crate.spec(version = "^1.0.116"),
        "sha2": crate.spec(version = "^0.10.8"),
        "strum": crate.spec(version = "^0.26.2"),
        "strum_macros": crate.spec(version = "^0.26.2"),
        "assert_matches": crate.spec(version = "^1.3.0"),
        "candid_parser": crate.spec(version = "^0.1.4"),
        "cycles-minting-canister": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "lazy_static": crate.spec(version = "^1.4.0"),
        "mockall": crate.spec(version = "^0.12.1"),
        "num-bigint": crate.spec(version = "^0.4.4"),
        "num-traits": crate.spec(version = "^0.2.18"),
        "ic-icrc1-ledger": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-nns-constants": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-nns-governance": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-init": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-root": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-swap": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-state-machine-tests": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "proptest": crate.spec(version = "^1.4.0"),
        "prost": crate.spec(version = "^0.12.3"),
        "tokio": crate.spec(version = "^1.36.0"),
    },
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

load("//bazel:ic_canister.bzl", "ic_canister")

# https://github.com/dfinity/ic/commit/0abc8efa13a533576dbd9b652e37e4a817e6051c
# 29th Feb 2024
ic_canister(
    name = "ledger-canister",
    sha256 = "e52fdbcf4b42218dbc62a042908207cc44a1e0014895c6e11122c79fe82c41be",
    version = "0abc8efa13a533576dbd9b652e37e4a817e6051c",
    wasm_file = "ledger-canister.wasm.gz",
)

ic_canister(
    name = "cycles-minting-canister",
    sha256 = "d33b381e3de4cb3a35493ba0398b3c7f7b7165306400b25fe9129b9f28d08774",
    version = "0abc8efa13a533576dbd9b652e37e4a817e6051c",
    wasm_file = "cycles-minting-canister.wasm.gz",
)

# https://github.com/dfinity/ic/commit/f58b13bc425784cd399070028ff8b3f3dca8c869
# 8th March 2024
ic_canister(
    name = "ic-icrc1-ledger",
    sha256 = "b60487873e58beda2fe7a02cfdf3c741bc48a30d3485aeec8a69a991d7807d4b",
    version = "f58b13bc425784cd399070028ff8b3f3dca8c869",
    wasm_file = "ic-icrc1-ledger.wasm.gz",
)

# https://github.com/dfinity/ic/commit/80e0363393ea26a36b77e8c75f7f183cb521f67f
# 25th April 2024
ic_canister(
    name = "sns-governance-canister",
    sha256 = "e6b285a50237a46d7cf72eb27ae4840222b98ecc02c20954a7946d039cab59f0",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-governance-canister.wasm.gz",
)

ic_canister(
    name = "sns-swap-canister",
    sha256 = "2bbaf53b7cbb8f20cdd6b30bf709f461a47d10b02b38cb1d54d52789c907f202",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-swap-canister.wasm.gz",
)

ic_canister(
    name = "sns-wasm-canister",
    sha256 = "6a666f46f0234e60d951ab17781324fefdc13b128f6b3138b1ade92887db1351",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-wasm-canister.wasm.gz",
)

# https://github.com/dfinity/ic/commit/ad5629caa17ac8a4545bc2e3cf0ecc990c9f681e
# 28th June 2024
ic_canister(
    name = "governance-canister",
    sha256 = "8f76b2de37197b3ff0ae188f1ef99ddd5bd75cb8f83fb87c2889822ece0b5576",
    version = "ad5629caa17ac8a4545bc2e3cf0ecc990c9f681e",
    wasm_file = "governance-canister.wasm.gz",
)

ic_canister(
    name = "sns-root-canister",
    sha256 = "dd0b6dfe7a25852ed6d421ce71382f30f7275046aed7c64d870c8e0bb4bba6ea",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-root-canister.wasm.gz",
)

# shfmt binary for fast shell linting
load("//bazel:shfmt.bzl", "shfmt")

shfmt(name = "shfmt")
