workspace(
    name = "waterneuron",
)

IC_VERSION = "7eace38b7580dc35af53b9180ea40480af4977dc"

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = [
        "1.76.0",
    ],
)

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")

# https://sourcegraph.com/github.com/dfinity/ic/-/blob/rs/monitoring/backtrace/build.rs
crates_repository(
    name = "crate_index",
    annotations = {
        "ic-icrc1-ledger": [crate.annotation(
            build_script_data = [
                "@ic-icrc1-ledger-canister//:wasm",
            ],
            build_script_env = {
                "IC_ICRC1_ARCHIVE_WASM_PATH": "$(execpath @ic-icrc1-ledger-canister//:wasm)",
            },
            build_script_rustc_env = {
                "IC_ICRC1_ARCHIVE_WASM_PATH": "$(execpath @ic-icrc1-ledger-canister//:wasm)",
            },
            data = [
                "@ic-icrc1-ledger-canister//:wasm",
            ],
        )],
        "ic-canister-sandbox-backend-lib": [crate.annotation(
            rustc_flags = [
                "-C",
                "link-arg=-L$(location @libunwind//:libunwind)",
                "-C",
                "link-arg=-lunwind",
            ],
        )],
    },
    cargo_lockfile = "//:Cargo.lock",
    isolated = True,
    lockfile = "//:Cargo.Bazel.lock",
    packages = {
        "assert_matches": crate.spec(version = "^1.5.0"),
        "async-trait": crate.spec(version = "^0.1.80"),
        "candid": crate.spec(
            version = "^0.10.7",
        ),
        "candid_parser": crate.spec(version = "^0.1.4"),
        "ciborium": crate.spec(version = "^0.2.2"),
        "clap": crate.spec(
            features = ["derive"],
            version = "4.5.9",
        ),
        "cycles-minting-canister": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "env_logger": crate.spec(version = "^0.11.3"),
        "hex": crate.spec(version = "^0.4.3"),
        "ic-agent": crate.spec(version = "^0.36.0"),
        "ic-base-types": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-cdk": crate.spec(version = "^0.13.2"),
        "ic-cdk-macros": crate.spec(version = "^0.13.2"),
        "ic-canister-log": crate.spec(version = "^0.2.0"),
        "ic-canisters-http-types": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-icrc1-ledger": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-metrics-encoder": crate.spec(version = "^1.1.1"),
        "ic-nns-constants": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-nns-governance": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-governance": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-sns-init": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-root": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-sns-swap": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-stable-structures": crate.spec(version = "^0.6.5"),
        "ic-state-machine-tests": crate.spec(
            git = "https://github.com/dfinity/ic.git",
            rev = IC_VERSION,
        ),
        "ic-utils-ensure": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic0": crate.spec(version = "^0.23.0"),
        "icp-ledger": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "icrc-ledger-client-cdk": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "icrc-ledger-types": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "ic-management-canister-types": crate.spec(
            git = "https://github.com/dfinity/ic/",
            rev = IC_VERSION,
        ),
        "lazy_static": crate.spec(version = "^1.5.0"),
        "log": crate.spec(version = "^0.4.14"),
        "minicbor": crate.spec(
            features = [
                "alloc",
                "derive",
            ],
            version = "^0.24.2",
        ),
        "minicbor-derive": crate.spec(version = "^0.15.0"),
        "mockall": crate.spec(version = "^0.12.1"),
        "num-bigint": crate.spec(version = "^0.4.4"),
        "num-traits": crate.spec(version = "^0.2.18"),
        "proptest": crate.spec(version = "^1.5.0"),
        "prost": crate.spec(version = "^0.12.6"),
        "regex": crate.spec(version = "^1.10.5"),
        "rust_decimal": crate.spec(version = "^1.35.0"),
        "rust_decimal_macros": crate.spec(version = "^1.34.2"),
        "scopeguard": crate.spec(version = "^1.2.0"),
        "serde": crate.spec(version = "^1.0.203"),
        "serde_bytes": crate.spec(version = "^0.11.15"),
        "serde_cbor": crate.spec(version = "^0.11.2"),
        "serde_json": crate.spec(version = "^1.0.120"),
        "sha2": crate.spec(version = "^0.10.8"),
        "strum": crate.spec(version = "^0.26.3"),
        "strum_macros": crate.spec(version = "^0.26.4"),
        "thiserror": crate.spec(version = "^1.0.63"),
        "tokio": crate.spec(
            features = ["full"],
            version = "^1.38.0",
        ),
    },
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

load("//bazel:ic_candid.bzl", "ic_candidfile")
load("//bazel:ic_canister.bzl", "ic_canister")

# https://sourcegraph.com/github.com/dfinity/ic@0abc8efa13a533576dbd9b652e37e4a817e6051c
# 29th Feb 2024
ic_canister(
    name = "ledger-canister",
    sha256 = "e31a3b38bbb3704876d8825bb826101d6f1f1843ad99c21a0d563e80bdd6e2f6",
    version = "de29a1a55b589428d173b31cdb8cec0923245657",
    wasm_file = "ledger-canister.wasm.gz",
)

ic_candidfile(
    name = "ledger-candid",
    commit = "de29a1a55b589428d173b31cdb8cec0923245657",
    file_path = "rs/rosetta-api/icp_ledger/ledger.did",
    sha256 = "f9c782f85e694d6732b007acc4046874773a183a7c5c41977d2d6ef7ef9346ee",
)

ic_canister(
    name = "cycles-minting-canister",
    sha256 = "d33b381e3de4cb3a35493ba0398b3c7f7b7165306400b25fe9129b9f28d08774",
    version = "0abc8efa13a533576dbd9b652e37e4a817e6051c",
    wasm_file = "cycles-minting-canister.wasm.gz",
)

ic_candidfile(
    name = "cycles-minting-candid",
    commit = "0abc8efa13a533576dbd9b652e37e4a817e6051c",
    file_path = "rs/nns/cmc/cmc.did",
    sha256 = "bc6594b11be79177b3ec9bc5598c31cbe96db2688970f4d574b1ecfc6cfdc974",
)

# https://sourcegraph.com/github.com/dfinity/ic@80e0363393ea26a36b77e8c75f7f183cb521f67f
# 25th April 2024
ic_canister(
    name = "sns-governance-canister",
    sha256 = "e6b285a50237a46d7cf72eb27ae4840222b98ecc02c20954a7946d039cab59f0",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-governance-canister.wasm.gz",
)

ic_candidfile(
    name = "sns-governance-candid",
    commit = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    file_path = "rs/sns/governance/canister/governance.did",
    sha256 = "1da82879071e5bd21ab8b363081072fcc87ebd90659fe3cdc9a0128110da222b",
)

ic_canister(
    name = "sns-swap-canister",
    sha256 = "2bbaf53b7cbb8f20cdd6b30bf709f461a47d10b02b38cb1d54d52789c907f202",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-swap-canister.wasm.gz",
)

ic_candidfile(
    name = "sns-swap-candid",
    commit = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    file_path = "rs/sns/swap/canister/swap.did",
    sha256 = "2bf54844fdc8f2fea524c1de4361ae2b34c68d319086f0d1a8e773400837caa0",
)

ic_canister(
    name = "sns-wasm-canister",
    sha256 = "a6ffc60e50d7c59ce5b3bfbfa1a234287891e9396c85be312c8e725a2510fb35",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-wasm-canister.wasm.gz",
)

ic_candidfile(
    name = "sns-wasm-candid",
    commit = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    file_path = "rs/nns/sns-wasm/canister/sns-wasm.did",
    sha256 = "9e9b3de46d12b35d7ffc1b639a424a6da7c72f80ad0dd222850f991e25dbb6f2",
)

ic_canister(
    name = "sns-root-canister",
    sha256 = "dd0b6dfe7a25852ed6d421ce71382f30f7275046aed7c64d870c8e0bb4bba6ea",
    version = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    wasm_file = "sns-root-canister.wasm.gz",
)

ic_candidfile(
    name = "sns-root-candid",
    commit = "80e0363393ea26a36b77e8c75f7f183cb521f67f",
    file_path = "rs/sns/root/canister/root.did",
    sha256 = "5a8f0fd58d8f4f35fa374f94e1be8eca99b71ef2a776477abbc7adb99a24c38f",
)

# https://sourcegraph.com/github.com/dfinity/ic@ad5629caa17ac8a4545bc2e3cf0ecc990c9f681e
# 28th June 2024
ic_canister(
    name = "governance-canister",
    sha256 = "8f76b2de37197b3ff0ae188f1ef99ddd5bd75cb8f83fb87c2889822ece0b5576",
    version = "ad5629caa17ac8a4545bc2e3cf0ecc990c9f681e",
    wasm_file = "governance-canister.wasm.gz",
)

ic_candidfile(
    name = "governance-candid",
    commit = "ad5629caa17ac8a4545bc2e3cf0ecc990c9f681e",
    file_path = "rs/nns/governance/canister/governance.did",
    sha256 = "747c786feafd0f26e70073cb8fa72fdd8d976c64ec6a1e4d07797d2053d2d186",
)

# https://sourcegraph.com/github.com/dfinity/ic@a3831c87440df4821b435050c8a8fcb3745d86f6
# 10th July 2024
ic_canister(
    name = "ic-icrc1-ledger-canister",
    sha256 = "4264ce2952c4e9ff802d81a11519d5e3ffdaed4215d5831a6634e59efd72f7d8",
    version = "a3831c87440df4821b435050c8a8fcb3745d86f6",
    wasm_file = "ic-icrc1-ledger.wasm.gz",
)

ic_candidfile(
    name = "ic-icrc1-ledger-candid",
    commit = "a3831c87440df4821b435050c8a8fcb3745d86f6",
    file_path = "rs/rosetta-api/icrc1/ledger/ledger.did",
    sha256 = "4cfa71941afd39ee4f5af0e151585388a798ca4dc4ec2d41b876810f2a780008",
)

ic_canister(
    name = "ic-icrc1-index-ng-canister",
    sha256 = "cac207cf438df8c9fba46d4445c097f05fd8228a1eeacfe0536b7e9ddefc5f1c",
    version = "a3831c87440df4821b435050c8a8fcb3745d86f6",
    wasm_file = "ic-icrc1-index-ng.wasm.gz",
)

ic_candidfile(
    name = "ic-icrc1-index-ng-candid",
    commit = "a3831c87440df4821b435050c8a8fcb3745d86f6",
    file_path = "rs/rosetta-api/icrc1/index-ng/index-ng.did",
    sha256 = "8795307a19db7ac1d702e4275a2efe217bbdaee537cbd4d5eb5ba1bc7ff590ac",
)

# rust-analyzer
load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_dependencies")

rust_analyzer_dependencies()

# candid
load("//bazel:candid.bzl", "candid")

candid(name = "candid")

# nix
# load rules_nixpkgs
http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "2a555348d7f8593fca2bf3fc6ce53c5d62929de81b6c292e23f16c557c0ae45a",
    strip_prefix = "rules_nixpkgs-0.11.1",
    urls = ["https://github.com/tweag/rules_nixpkgs/releases/download/v0.11.1/rules_nixpkgs-0.11.1.tar.gz"],
)

# load everything that rules_nixpkgs rules need to work
load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")

rules_nixpkgs_dependencies()

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_local_repository", "nixpkgs_cc_configure")
nixpkgs_local_repository(
    name = "nixpkgs",
    nix_file = "//:nixpkgs.nix",
    nix_file_deps = ["//:flake.lock"],
)

nixpkgs_cc_configure(
  repository = "@nixpkgs",
  name = "nixpkgs_config_cc",
)
