genrule(
    name = "git_commit_id",
    srcs = [
        "//:WORKSPACE.bazel",
    ],
    outs = ["git_commit_id.txt"],
    cmd = """
        WORKSPACE="$(rootpath //:WORKSPACE.bazel)"
        REPO_PATH="$$(dirname "$$(readlink "$$WORKSPACE")")"
        cd "$$REPO_PATH"
        git rev-parse HEAD > $@
    """,
    tags = [
        "external",
        "local",
        "smoke",
    ],
    visibility = ["//visibility:public"],
)
